# kernel

./: .gitignore  Cargo.toml  acorn_build.rs  amd64.json  build.rs  clean.sh  link.ld  makefile  rust-toolchain.toml
.cargo/: config.toml
arch/: Cargo.toml
arch/amd64/: Cargo.toml
arch/src/: lib.rs
boot/: Cargo.toml
boot/src/: main.rs
dep/: Cargo.toml
dep/.cargo/: config.toml
dep/bitmap/: Cargo.toml
dep/elf/: Cargo.toml
dep/freelist/: Cargo.toml
hal/: Cargo.toml
hal/src/: boot.rs  fb.rs  kbd.rs  lib.rs
kernel/: Cargo.toml  amd64.ld  build.rs
kernel/.cargo/: config.toml
kernel/lib/: arch.rs  klog.rs  lib.rs  mm.rs  path.rs
kernel/lib/allocators/: block.rs
kernel/lib/arch/: x86.rs
kernel/lib/arch/x86/: fb.rs  irq.rs  mm.rs  serial.rs
kernel/lib/arch/x86/mm/: adr.rs  vm.rs
kernel/lib/bitmap/: Cargo.toml
kernel/lib/bitmap/src/: lib.rs
kernel/lib/buddy/src/: lib.rs
kernel/lib/freelist/src/: lib.rs  test.rs
kernel/lib/mm/: kalloc.rs  wm.rs
kernel/lib/syscall/: Cargo.toml
kernel/lib/syscall/src/: lib.rs
kernel/src/: arch.rs  boot.rs  kernel.rs  kernel_elf.rs  klog.rs  lib.rs  logging.rs  macros.rs  main.rs  math.rs  mm.rs  panic.rs  scheduler.rs  symbols.rs  syscall.rs  tty.rs  util.rs
kernel/src/arch/: mod.rs  x86.rs
kernel/src/arch/amd64/: acpi.rs  apic.rs  boot.rs  boot.s  cpu.rs  cpuc.rs  fb.rs  gdt.rs  gdt.s  idt.rs  ioapic.rs  isr.rs  isr.s  lapic.rs  mod.rs  msr.rs  panic.rs  pic.rs  port.rs  rsdp.rs  sdt.rs  stack_unwind.rs  thread.rs  vm.rs  vmm.rs
kernel/src/arch/amd64/apic/: ioapic.rs  lapic.rs  mod.rs
kernel/src/arch/amd64/boot/: entry.asm  entry.s  mod.rs
kernel/src/arch/amd64/cpu/: ctrl_regs.rs  mod.rs
kernel/src/arch/amd64/interrupt/: except.rs  idt.rs  irq.rs  mod.rs  stubs.s  syscall.rs  syscall.s
kernel/src/arch/amd64/serial/: uart.rs
kernel/src/arch/amd64/vmm/: mod.rs  page_map.rs
kernel/src/arch/x86/: boot.rs  fb.rs  io.rs
kernel/src/arch/x86/boot/: stage3.s
kernel/src/arch/x86/mm/: vm.rs
kernel/src/boot/: entry.asm  limine.rs  mod.rs  x86.rs
kernel/src/drivers/: crsr.rs  kbd.rs  mod.rs  vga.rs
kernel/src/fs/: initrd.rs  mod.rs
kernel/src/fs/impls/: initrd.rs  mod.rs
kernel/src/init/: main.rs  mod.rs
kernel/src/mm/: heap.rs  hhdm.rs  kalloc.rs  mod.rs  pmm.rs  vmm.rs  wm.rs
kernel/src/mm/heap/: error.rs  free_list.rs  mod.rs  primordial.rs
kernel/src/mm/vmm/: error.rs  mod.rs
kernel/src/panic/: mod.rs
kernel/src/panic/stack_unwind/: amd64.s
kernel/src/process/: error.rs  init.rs  mod.rs  scheduler.rs  thread.rs
kernel/src/process/kernel_procs/: empty.rs  main.rs  mod.rs
kernel/src/process/loader/: elf.rs
kernel/src/process/thread/: mod.rs  sched.rs
kernel/src/util/: adr.rs  locked.rs  mod.rs
lib/: Cargo.toml
lib/.cargo/: config.toml
lib/allocators/: Cargo.toml
lib/bitset/: Cargo.toml
lib/buf/: Cargo.toml
lib/libio/: Cargo.toml
lib/libk/: Cargo.toml
lib/libmm/: Cargo.toml
lib/link/: Cargo.toml
lib/std/: Cargo.toml
macros/: Cargo.toml
macros/defs/: Cargo.toml
macros/src/: lib.rs
math/: Cargo.toml
math/src/: lib.rs
mm/: Cargo.toml
mm/src/: alloc.rs  lib.rs  mmap.rs  vm.rs
modules/: Cargo.toml
modules/.cargo/: config.toml
scripts/: links.lds  makefile.build  makefile.clean  makefile.suffixes  makefile.tail
src/: arch.rs  fb.rs  klog.rs  ksyms.rs  main.rs  mm.rs  panic.rs  tty.rs  util.rs
src/arch/: fb.rs  gdt.rs  io.rs  isr.rs  mod.rs  paging.rs  pic.rs  x86.rs
src/boot/: mod.rs
src/drivers/: com.rs  mod.rs
src/mm/: heap.rs  kalloc.rs  mod.rs  paging.rs  (+3 more)
tools/: Cargo.toml
usrspc/: Cargo.toml  todo.txt
util/: Cargo.toml
(+98 files in other folders)
