[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "macros",
    "macros/defs",
    
    "util",
    
    "hal",

    "arch/amd64",
]

[dependencies]
cfg-if = "1.0.0"
spin = "0.9.4"
static_assertions = "1.1.0"
unwinding = { version = "0.1.5", default-features = false, features = ["unwinder", "fde-static", "personality", "panic"] }

[dependencies.proc-macro]
path = "macros"

[dependencies.util]
path = "util"

[dependencies.hal]
path = "hal"

[target.'cfg(target_arch = "x86_64")'.dependencies.amd64]
path = "arch/amd64"