[package]
name = "acornos"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
spin = "0.9.4"
static_assertions = "1.1.0"
log = "0.4.17"
proc-bitfield = { version = "0.2.2", features = ["nightly"] }

[profile.dev]
opt-level = 1
debug-assertions = true 
debug = true
lto = false
panic = "abort"

[profile.release]
opt-level = 3
lto = true
panic = "abort"