[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
path = "src/main.rs"

[lib]
name = "klib"
path = "lib/lib.rs"

[dependencies]
cfg-if = "1.0.0"
static_assertions = "1.1.0"
spin = "0.9.5"
log = "0.4.17"
proc-bitfield = "0.2.2"
limine = {version = "0.1.10", features = ["requests-section"]}

[dependencies.ctor]
path = "deps/ctor"

[dependencies.bitmap]
path = "deps/bitmap"

[dependencies.bitset]
path = "deps/bitset"

[dependencies.buddy]
path = "deps/buddy"

[dependencies.freelist]
path = "deps/freelist"

[members]
members = [
    "deps/ctor",
    "deps/bitmap",
    "deps/bitset",
    "deps/buddy",
    "deps/freelist",
]