[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
path = "src/main.rs"

[members]
members = [
    "deps/ctor",
]

[dependencies]
cfg-if = "1.0.0"
static_assertions = "1.1.0"
spin = "0.9.5"
log = "0.4.17"
proc-bitfield = "0.2.2"
limine = {version = "0.1.10", features = ["requests-section"]}

[dependencies.ctor]
path = "deps/ctor"

[dependencies.bitmap]
path = "../dep/bitmap"
features = []

[dependencies.buddy]
path = "../dep/buddy"

[dependencies.freelist]
path = "../dep/freelist"
features = []

[dependencies.bitset]
path = "../dep/bitset"

[dependencies.elf]
path = "../dep/elf"

