[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
path = "src/kernel.rs"

[lib]
name = "kernel"
path = "src/kernel.rs"

[members]
members = [
    "deps/ctor",
    "lib/syscall",
]

[profiles.release]
strip = "none"

[dependencies]
cfg-if = "1.0.0"
static_assertions = "1.1.0"
spin = "0.9.5"
log = "0.4.17"
proc-bitfield = "0.2.2"
limine = {version = "0.1.10", features = ["requests-section"]}
memoffset = "0.8.0"

[dependencies.ctor]
path = "deps/ctor"

[dependencies.allocators]
path = "../lib/allocators"
features = []

[dependencies.bitset]
path = "../lib/bitset"

[dependencies.elf]
path = "../lib/elf"



